--- a/flaskr/templates/meter.html
+++ b/flaskr/templates/meter.html
@@ -1,24 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Risk-Meter</h1>
+<h1>Password Risk-Meter</h1>
 
-<div class="container">
-    <!-- Search bar at the top of the container -->
-    <div class="search-bar">
-        <input type="text" placeholder="Search...">
-    </div>
-
-    <!-- Contenedor central para las tarjetas -->
-    <div class="card-container">
-        <div class="columns">
-            <!-- Columna izquierda -->
-            <div class="left-column">
-                <!-- Cards de servicios -->
-                <div class="service-card">
-                    <h2>Service</h2>
-                    <img src="https://via.placeholder.com/150" alt="Placeholder Image">
-                </div>
+<div class="search-bar">
+    <input type="text" placeholder="Search service..." id="searchInput">
+    <div id="suggestions" class="suggestions-list"></div>
+</div>
+<div class="card-container">
+    <div class="columns">
+        <div class="left-column">
+            <div class="service-card" id="serviceCard">
+                <h2>Service</h2>
+                <p>Select a service to view its details</p>
+            </div>
+        </div>
 
                 <!-- Global Risk -->
                 <div class="service-card">
@@ -70,5 +66,6 @@
 </div>
 
 <script src="{{ url_for('static', filename='js/zxcvbn.js') }}"></script>
+<script src="{{ url_for('static', filename='js/search.js') }}"></script>
 <script src="{{ url_for('static', filename='js/passwordStrengthChecker.js') }}" defer></script>
 {% endblock %}
