--- a/flaskr/templates/meter.html
+++ b/flaskr/templates/meter.html
@@ -3,11 +3,14 @@
 {% block content %}
 <h1>Password Risk-Meter</h1>
 
-<div class="search-bar">
-    <input type="text" placeholder="Search service..." id="searchInput">
-    <div id="suggestions" class="suggestions-list"></div>
-</div>
 <div class="card-container">
+    <!-- Search bar -->
+    <div class="search-bar">
+        <input type="text" placeholder="Search service..." id="searchInput">
+        <div id="suggestions" class="suggestions-list"></div>
+    </div>
+
+    <!-- Two-column layout -->
     <div class="columns">
         <div class="left-column">
             <div class="service-card" id="serviceCard">
@@ -15,6 +18,7 @@
                 <p>Select a service to view its details</p>
             </div>
         </div>
+        <div class="right-column">
 
                 <!-- Global Risk -->
                 <div class="service-card">
