--- a/flaskr/templates/meter.html
+++ b/flaskr/templates/meter.html
@@ -1,7 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Password Risk-Meter</h1>
+<h1>Password Risk Meter</h1>
+
+<div class="research-info">
+    <p>
+        This website, designed as part of the research project 
+        <strong>APAMCiber</strong> (Attribution and Prevention of Threats with Impact on Multiple Relevant Groups in Cybersecurity), 
+        funded by <strong>INCIBE</strong> and conducted at <strong>Universidad Carlos III de Madrid</strong>, 
+        aims to validate the password risk meter developed for the project. 
+        <strong>No personal data is collected.</strong>
+    </p>
+</div>
+
 
 <div class="container">
     <!-- Search bar at the top of the container -->
@@ -12,67 +23,87 @@
 
     <!-- Two-column setup -->
     <div class="card-container">
-        <div class="columns">
-            <!-- Left Column -->
-            <div class="left-column">
-                <div class="service-card" id="serviceCard">
-                    <h2>Service</h2>
-                    <p>Select a service to view its details</p>
+
+        <div class="service-card" id="serviceCard">
+            <h2>Service</h2>
+            <p>Select a service to view its details</p>
+        </div>
+
+        <div class="service-card">
+            <div class="password-section">
+                <h2>User's Choices</h2>
+                <label for="password">Enter Password:</label>
+                <input type="text" id="password" oninput="evaluatePassword()" placeholder="Type your password here">
+                <p id="passwordCompositionReq"></p>
+                <p id="passwordScore"></p>
+                <label for="reuses">Chosen Password uses:</label>
+                <select id="reuses">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="10">More than 3</option>
+                </select>
+            </div>
+        </div>
+
+        <!-- Risk Indicator Legend -->
+        <div class="service-card">
+            <h2>Risk Indicator Legend</h2>
+            <div class="legend-item">
+                <span class="legend-circle" style="background-color: green;"></span> Very small risk
+            </div>
+            <div class="legend-item">
+                <span class="legend-circle" style="background-color: yellow;"></span> Small risk
+            </div>
+            <div class="legend-item">
+                <span class="legend-circle" style="background-color: orange;"></span> Big risk
+            </div>
+            <div class="legend-item">
+                <span class="legend-circle" style="background-color: red;"></span> Very big risk
+            </div>
+        </div>
+
+        <!-- Conditionally render Risk Indicators -->
+        {% if show_risk_indicators %}
+        <div class="service-card">
+            <div class="risk-box">
+                <h2>Risk Indicators</h2>
+                <div class="indicator-item">
+                    <span>Risk of Data Exposure</span>
+                    <!-- <span class="risk-number" id="riskOfDataExposure">0</span> -->
+                    <div class="indicator" id="riskOfDataExposureIndicator"></div>
+                    <div><p  class="explanation-text">The risk of your private data being leaked in the internet</p></div>
                 </div>
-                <div class="service-card">
-                    <div class="global-risk">
-                        <h3>Global Risk</h3>
-                        <div class="global-risk-value">
-                            <span id="globalRisk">0</span>
-                        </div>
-                        <div class="color-indicator" id="globalRiskColor"></div>
-                    </div>
+                <div class="indicator-item">
+                    <span>User Login Protection</span>
+                    <!-- <span class="risk-number" id="serviceRisk">0</span> -->
+                    <div class="indicator" id="serviceRiskIndicator"></div>
+                    <div><p  class="explanation-text">The protection provided by the service</p></div>                         
+                </div>
+                <div class="indicator-item">
+                    <span>Users' Choices</span>
+                    <!-- <span class="risk-number" id="userRisk">0</span> -->
+                    <div class="indicator" id="userRiskIndicator"></div>
+                    <div><p class="explanation-text">The security that your password will have against an attack</p></div>
                 </div>
             </div>
+        </div>
+        {% endif %}
 
-
-            <!-- Right Column -->
-            <div class="right-column">
-                 <!-- Conditionally render Risk Indicators -->
-                 {% if show_risk_indicators %}
-                <div class="risk-box">
-                    <h2>Risk Indicators</h2>
-                    <div class="indicator-item">
-                        <span>Risk of Data Exposure</span>
-                        <span class="risk-number" id="riskOfDataExposure">0</span>
-                        <div class="indicator" id="riskOfDataExposureIndicator"></div>
-                        <div><p  class="explanation-text">The risk of your private data being leaked in the internet</p></div>
-                    </div>
-                    <div class="indicator-item">
-                        <span>User Login Protection</span>
-                        <span class="risk-number" id="serviceRisk">0</span>
-                        <div class="indicator" id="serviceRiskIndicator"></div>
-                        <div><p  class="explanation-text">The protection provided by the service</p></div>                         
-                    </div>
-                    <div class="indicator-item">
-                        <span>Users' Choices</span>
-                        <span class="risk-number" id="userRisk">0</span>
-                        <div class="indicator" id="userRiskIndicator"></div>
-                        <div><p class="explanation-text">The security that your password will have against an attack</p></div>
-                    </div>
+        <div class="service-card">
+            <div class="global-risk">
+                <h3>Global Risk</h3>
+                <div class="global-risk-value">
+                    <!-- <span id="globalRisk">0</span> -->
                 </div>
-                {% endif %}
-
-                <div class="password-section">
-                    <h2>User's Choices</h2>
-                    <label for="password">Enter Password:</label>
-                    <input type="text" id="password" oninput="evaluatePassword()" placeholder="Type your password here">
-                    <p id="passwordCompositionReq"></p>
-                    <p id="passwordScore"></p>
-                    <label for="reuses">Chosen Password uses:</label>
-                    <select id="reuses">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="10">More than 3</option>
-                    </select>
-                </div>
+                <div class="color-indicator" id="globalRiskColor"></div>
             </div>
+        </div>
+
+        <div class="data-privacy-notice">
+            <p>
+                All data entered by the user is processed locally and <strong>no data is collected or stored.</strong>
+            </p>
         </div>
     </div>
 </div>
